2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Added sygpiotest(1) to the set of installed programs.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Removed syslog calls for GPIO events in 'sy/sygpio_server.cpp'.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 6:0:3.
	* Incremented the package version to 0.11.8.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Removed syslog calls for GPIO send events in 'sy/sygpio_server.cpp'.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for a 'SWITCHYARD_SUPPRESS_DEBUG' environmental
	variable.
2016-12-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyGpioEvent::dump()' method in 'sy/sygpio_server.cpp' and
	'sy/sygpio_server.h'.
	* Added a 'SyProfile::sectionNames()' method in 'sy/syprofile.cpp'
	and 'sy/syprofile.h'.
2016-12-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:0:4.
	* Incremented the package version to 0.11.9.
2016-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'SyLwprClient' to detect hostname and host address for
	xNode devices.
	* Fixed a bug in 'tests/synodetest.cpp' that displayed the incorrect
	host address value.
2016-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:1:4.
	* Incremented the package version to 0.11.10.
2017-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fencepost error in processing serial numbers for
	multicast GPIO messages in 'sy/sygpio_server.cpp'.
2017-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:2:4.
	* Incremented the package version to 0.11.11.
2017-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'SyGpioServer' in 'sy/sygpio_server.cpp' to use
	double signalling for GPIO events.
2017-03-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:3:4.
	* Incremented the package version to 0.11.12.