@@ -508,3 +508,6 @@
 2017-03-06 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 7:3:4.
 	* Incremented the package version to 0.11.12.
+2017-06-20 Fred Gleason <fredg@paravelsystems.com>
+	* Changed return type of 'SyMcastSocket::subscribe()' and
+	'SyMcastSocket::unsubscribe()' methods from 'void' to 'bool'.
